# ridge-exam-tool

./: .gitignore  Cargo.toml  docker-compose.yml
.cargo/: config.toml
client/: Cargo.toml
client/src/: main.rs
cont-secrets/: pgadmin-default-email.txt
shared/src/: lib.rs
src/: domain.rs  lib.rs  main.rs  models.rs  styles.rs  widgets.rs
webapp/: Cargo.toml  \  index.html  package-lock.json  package.json  tailwind.config.js
webapp/src/: app.rs  lib.rs  lib.rs~  main.rs
