[package]
name = "ridge-exam-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
iced = {version = "0.13.1", features = ["svg", "image", "advanced"]}
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
tokio = { version = "1.44", features = [ "rt-multi-thread" ] }
