[workspace]
members = ["webapp", "client", "shared"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Jethro Djan <jthryeboah@gmail.com>"]

[workspace.dependencies]
argon2 = { version = "0.5.3" }
dotenvy = { version = "0.15.7" }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid"] }
