[package]
name = "client"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
argon2 = { workspace = true }

iced = { version = "0.13.1", features = ["svg", "image", "advanced", "tokio"] }
dotenvy = { version = "0.15.7" }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
