[package]
name = "client"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
argon2 = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true }

shared = { path = "../shared" }

iced = { version = "0.13.1", features = ["svg", "image", "advanced", "tokio"] }
leptos = { version = "0.7.8", features = ["ssr"] }
