[package]
name = "webapp"
version.workspace = true
edition.workspace = true
authors.workspace = true

# [lib]
# crate-type = ["cdylib"]

[dependencies]
argon2 = { workspace = true }

leptos = { version = "0.7.8", features = ["csr"] }
wasm-bindgen = { version = "0.2.93" }
web-sys = { version = "0.3.70" }
console_error_panic_hook = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1" }
getrandom = { version = "0.3", features = ["wasm_js"] }
