[package]
name = "webapp"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
argon2 = { workspace = true, optional = true }
dotenvy = { workspace = true }
sqlx = { workspace = true, optional = true }
shared = { path = "../shared" }
getrandom = { version = "0.2.15", features = ["js"] }

# dependencies for browser (enable when hydrate set)
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "=0.2.100", optional = true }

actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
actix-session = { version = "0.10.1", features = ["cookie-session"], optional = true }
http = { version = "1.0.0", optional = true }
leptos = { version = "0.7.0" }
leptos_meta = { version = "0.7.0" }
leptos_actix = { version = "0.7.0", optional = true }
leptos_router = { version = "0.7.0" }
uuid = { version = "1.16.0", features = ["v4"], optional = true }

serde = { version = "1.0", features = ["derive"] }
env_logger = { version = "0.11.8" }
log = "0.4.27"
chrono = { version = "0.4.40", features = ["serde"] }

[features]
hydrate = [
	"leptos/hydrate", 
	"dep:wasm-bindgen", 
	"dep:console_error_panic_hook"
]
ssr = [
  "leptos/ssr", 
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:actix-files",
  "dep:actix-web",
  "dep:leptos_actix",
  "dep:sqlx",
  "dep:argon2",
  "dep:actix-session",
  "dep:uuid",
]
[package.metadata.cargo-all-features]
denylist = [
  "actix-files",
  "actix-web",
  "console_error_panic_hook",
  "leptos_actix",
  "wasm-bindgen",
  "sqlx",
  "argon2",
]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"], []]

[profile.wasm-release]
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.leptos]
output-name = "webapp"
site-root = "target/site"
site-pkg-dir = "pkg"
tailwind-input-file = "style/tailwind.css"
assets-dir = "assets"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
